Mon Sep 23 00:04:48 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (initialize_global_constants): Define %dist,
	dist_header, dist_trailer.
	(handle_dist): Make dist-all target.
	(generate_makefile): Run check_typos later.
	(examine_variable): New sub.
	(handle_tags): Examine TAGS_DEPENDENCIES.  Test spell3.test.
	Error if TAGS_DEPENDENCIES but no sources used.
	(handle_configure): Examine CONFIGURE_DEPENDENCIES.

Sat Sep 21 13:59:15 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (am_install_var): More error checking.

Fri Sep 20 09:06:37 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* tags.am (TAGS): Minor cleanup.

	* clean.am (distclean-generic): Don't remove CONFIG_HEADER.

	* remake-hdr.am (mostlyclean-hdr, clean-hdr, distclean-hdr,
	maintainer-clean-hdr): New targets.

	* automake.in (handle_configure): Define CONFIG_HEADER correctly
	when it is in current directory.
	(handle_configure): Push "hdr" on @clean.

	* remake-hdr.am (stamp-h): Run config.status in top_builddir.
	($(srcdir)/stamp-h.in): Run autoheader in top_srcdir.

	* automake.in (scan_configure): Check for install.sh here.
	(basename): New sub.
	(handle_configure): Handle case where config.h is in subdir.
	(handle_configure): Make stamp-in.h for user if it doesn't already
	exist.
	(touch): New sub.

Tue Sep 17 23:35:14 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* Makefile.am (EXTRA_DIST): Include pkgdata_DATA.

	* dist-vars.am (DISTFILES): Don't distribute BUILT_SOURCES or
	DATA.
	(DEP_DISTFILES): Ditto.

Mon Sep 16 22:28:56 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (check_typos): Renamed.
	(check_typos): Check for _LDADD, _LIBADD, and _DEPENDENCIES.
	(variable_defined): Note variable as being "seen".
	(handle_lib_objects): Don't push configure substitutions onto
	_DEPENDENCIES.

Sun Sep 15 22:45:43 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (initialize_per_input): Init content_seen.