@@ -17,7 +17,7 @@ info files, which is currently somewhat broken).
 
 Per Bothner says:
 Per> 1) Being able to build a set of non-source programs
-Per> from source porgrams, without necessarily linking them together.
+Per> from source programs, without necessarily linking them together.
 Per> I.e. one should be able to say something like:
 Per> 	dummy_SOURCES=foo.c bar.c
 Per> and automake should realize that it needs to build foo.o and bar.o.
@@ -46,12 +46,6 @@ Per> .class files from a list of .java source files.
 * patch from Joel Weber about fixing yacc; in particular generating .h file
 
 !! should write autoconf-style doc entries for each m4 macro
-
-  [ this should really go into autoconf in some automatic way ]
-Joel> I know that the following is needed at the end of configure.in:
-Joel>         [test -z "$CONFIG_HEADERS" || echo timestamp >stamp-h])
-Joel> However, if automake checked that this line is present, it would
-Joel> help...this bit me for a while.
 
 Jim's idea: should look for @setfilename and warn if filenames too long
 * guess split size
@@ -225,6 +219,10 @@ Multi-language support:
 * should automatically handle the linking issue (special-case C++)
 * must get compile rules for various languages; FORTRAN probably
   most important unimplemented language
+This should be integrated in some way with Per's idea.
+Eg .f.o rules should be recognized & auto-handled in _SOURCES
+That way any random language can be treated with C/C++ on a first-class
+basis (maybe)
 
 Should 'distclean' "rm -rf .deps"?
 
@@ -351,6 +349,19 @@ must document the targets required for integration with
 non-automake-using subdirs
 
 use of (eg) EXTRA_PROGRAMS is not very clear right now
+
+================================================================
+
+Things to do for autoconf:
+
+* allow random code to be inserted a la the 2nd arg to AC_OUTPUT:
+Joel> I know that the following is needed at the end of configure.in:
+Joel>         [test -z "$CONFIG_HEADERS" || echo timestamp >stamp-h])
+Joel> However, if automake checked that this line is present, it would
+Joel> help...this bit me for a while.
+
+* patch autoreconf to run automake and aclocal (this is done but
+  not really available)
 
 ================================================================
 
