@@ -1175,7 +1175,7 @@ sub handle_scripts
 	    && &variable_defined ($key . '_SCRIPTS'))
 	{
 	    $scripts_installed = 1;
-	    last;
+	    # push (@check, 'check-' . $key . 'SCRIPTS');
 	}
     }
 
