@@ -33,3 +33,18 @@ uninstall-@DIR@SCRIPTS:
 	list="$(@DIR@_SCRIPTS)"; for p in $$list; do \
 	  rm -f $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
 	done
+
+## Uncomment line in handle_scripts when this is uncommented.
+## check-@DIR@SCRIPTS:
+## 	pid=$$$$; list="$(@DIR@_SCRIPTS)"; for p in $$list; do \
+## 	  for opt in --help --version; do \
+## 	    if test -f $$p; then :; \
+## 	    else if test -f $(srcdir)/$$p; then \
+## 	      p=$(srcdir)/$$p; \
+## 	    else exit 1; fi; fi; \
+## 	    if $$p $$opt > .chkout$$pid 2> .chkerr$$pid \
+## 	         && test -n "`cat .chkout$$pid`" \
+## 	         && test -z "`cat .chkerr$$pid`"; then :; \
+## 	    else echo "$$p failed $$opt test" 1>&2; exit 1; fi; \
+## 	  done; \
+## 	done; rm -f .chk???$$pid
