@@ -1,5 +1,8 @@
 Mon Sep 23 00:04:48 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* automake.in (handle_scripts): Push new target onto @check.
+	* scripts.am (check-@DIR@SCRIPTS): New target.
+
 	* automake.in (initialize_global_constants): Define %dist,
 	dist_header, dist_trailer.
 	(handle_dist): Make dist-all target.
